Protect from null property results during search